# qa-fork-1783518516-poetry-monorepo-multipackage

./: README.md  autotest_config.json  pyproject.toml
